--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,10 +8,6 @@ body{
     font-family: 'Lato', sans-serif;
 }
 
-/* *{
-    margin: 0;
-    padding: 0;
-} */
 
 .chartContainer{
     display: grid;
@@ -111,13 +107,19 @@ body{
     width: 50rem;
 } */
 
-.cpuInfo{
-    margin-left: 1rem;
-    width: 50rem;
-    margin: 0 auto;
+.deviceInfo{
+    width: 100%;
+    margin-top: 3.5rem;
 }
 
-.header_cpu{
+.cpuInfo, .systemInfo, .biosInfo{
+    /* margin-left: 1rem; */
+    width: 100%;
+    width: 50rem;
+    margin: 0 auto 3.5rem auto;
+}
+
+.header_cpu, .header_system, .header_bios{
     text-transform: uppercase;
     font-size: 600;
     padding: 1rem;
@@ -125,16 +127,12 @@ body{
     color: #6b6b6b;
 }
 
-.cpuInfo-table{
+.cpuInfo-table, .systemInfo-table, .biosInfo-table{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
-/* .cpuManufacturer-heading, .cpuBrand-heading, .physicalCores-heading, .logicalProcessor-heading{
-    background-color: lightgray;
-} */
-
-.cpu_data{
+.cpu_data, .system_data, .bios_data{
     padding: 1rem;
     border: 1px solid #bfbfbf;
 }
