--- a/views/device.pug
+++ b/views/device.pug
@@ -19,6 +19,12 @@ html(lang="en")
                 div.nav-section.system
                     a.nav-link(href="/memory") Memory
 
+                div.nav-section.system
+                    a.nav-link(href="/battery") Battery
+
+                div.nav-section.system
+                    a.nav-link(href="/os") OS
+
             div.deviceInfo
             
                 div.systemInfo
