--- a/views/os.pug
+++ b/views/os.pug
@@ -1,44 +1,21 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="/styles/style.css")
-        title #{title}
-    body
-        main.main
-            navbar.sidebar
-                div.nav-section.profile
-                    a.nav-link(href="") My Profile 
-                div.nav-section.cpu
-                    a.nav-link(href="/cpu") CPU 
-                
-                div.nav-section.system
-                    a.nav-link(href="/device") System
+extends base
 
-                div.nav-section.system
-                    a.nav-link(href="/memory") Memory
+block content
 
-                div.nav-section.system
-                    a.nav-link(href="/battery") Battery
-
-                div.nav-section.system
-                    a.nav-link(href="/os") OS
-
-            div.deviceInfo
+    div.deviceInfo
             
-                div.osInfo
-                    h3.header_os OS Info
+        div.osInfo
+            h3.header_os OS Info
 
-                    div.osInfo-table
-                        div.os_data OS Platform
-                        div.os_data= system.osPlatform
+            div.osInfo-table
+                div.os_data OS Platform
+                div.os_data= system.osPlatform
 
-                        div.os_data OS Distro
-                        div.os_data= system.osDistro
+                div.os_data OS Distro
+                div.os_data= system.osDistro
 
-                        div.os_data OS Architecture 
-                        div.os_data= system.osArch
+                div.os_data OS Architecture 
+                div.os_data= system.osArch
 
-                        div.os_data OS Host Name 
-                        div.os_data= system.osHost
+                div.os_data OS Host Name 
+                div.os_data= system.osHost
