added profile page

--- a/views/_sidebar.pug
+++ b/views/_sidebar.pug
@@ -1,6 +1,6 @@
 navbar.sidebar
                 div.nav-section.profile
-                    a.nav-link(href="") My Profile 
+                    a.nav-link(href="/profile") My Profile 
                 div.nav-section.cpu
                     a.nav-link(href="/cpu") CPU 
                 
