--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,103 +1,100 @@
-@import url('https://fonts.googleapis.com/css2?family=Iceland&family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Iceland&family=Lato&display=swap");
 
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
 
-body{
-    font-family: 'Lato', sans-serif;
+body {
+  font-family: "Lato", sans-serif;
 }
 
-
-.chartContainer{
-    display: grid;
-    width: 100%;
-    margin-bottom: 3.5rem;
-    margin-top: 3.5rem;
-    /* flex-direction: column; */
+.chartContainer {
+  display: grid;
+  width: 100%;
+  margin-bottom: 3.5rem;
+  margin-top: 3.5rem;
+  /* flex-direction: column; */
 }
 
-#myChart{
-    width: 70vw !important;
-    height: 70vh !important;
-    justify-self: center;
+#myChart {
+  width: 70vw !important;
+  height: 70vh !important;
+  justify-self: center;
 }
 
-#batteryData{
-    width: 750px !important;
-    height: 750px !important;
+#batteryData {
+  width: 750px !important;
+  height: 750px !important;
 }
 
-.memoryChart{
-    display: grid;
+.memoryChart {
+  display: grid;
 }
-#memoryChart{
-    width: 70vw !important;
-    height: 70vh !important;
-    justify-self: center;
+#memoryChart {
+  width: 70vw !important;
+  height: 70vh !important;
+  justify-self: center;
 }
-
 
 /* this is the styling for the signup page*/
 
-.main{
-    display: flex;
-    flex-direction: row;
+.main {
+  display: flex;
+  flex-direction: row;
 }
 
-.sidebar{
-    width: 12vw;
-    min-height: 100vh;
-    font-size: 1.3rem;
-    /* height: 100vh; */
-    /* background-image: linear-gradient(to bottom right, whitesmoke, #696969 ); */
-    background-color: #d6d6d6;
+.sidebar {
+  width: 12vw;
+  min-height: 100vh;
+  font-size: 1.3rem;
+  /* height: 100vh; */
+  /* background-image: linear-gradient(to bottom right, whitesmoke, #696969 ); */
+  background-color: #d6d6d6;
 }
 
-
-.nav-section{
-    padding: 1rem;
-    border-bottom: 1px solid #696969;
+.nav-section {
+  padding: 1rem;
+  border-bottom: 1px solid #696969;
 }
 
-.nav-link{
-    text-decoration: none;
-    color: #696969;
-    /* padding: 1rem; */
+.nav-link {
+  text-decoration: none;
+  color: #696969;
+  /* padding: 1rem; */
 }
 
-.info{
-    width: 100%;
+.info {
+  width: 100%;
 }
 
-.header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 2rem;
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 2rem;
 }
 
-.btn__update_system{
-    font-size: 1.4rem;
-    padding: 1.4rem 3rem;
-    border-radius: 10rem;
-    border: none;
-    background-color: lightblue;
-    color: black;
-    cursor: pointer;
+.btn__update_system {
+  font-size: 1.4rem;
+  padding: 1.4rem 3rem;
+  border-radius: 10rem;
+  border: none;
+  background-color: lightblue;
+  color: black;
+  cursor: pointer;
 }
 
-.form__details{
-    display: flex;
-    flex-direction: row;
+.form__details {
+  display: flex;
+  flex-direction: row;
 }
 
-.systemInfo-container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 50rem;
-    margin: 3.5rem auto;
-    font-size: 1.6rem;
+.systemInfo-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 50rem;
+  margin: 3.5rem auto;
+  font-size: 1.6rem;
 }
 
 /* .cpu-info{
@@ -108,41 +105,102 @@ body{
     width: 50rem;
 } */
 
-.deviceInfo{
-    width: 100%;
-    margin-top: 3.5rem;
+.deviceInfo {
+  width: 100%;
+  margin-top: 3.5rem;
 }
 
-.cpuInfo, .systemInfo, .biosInfo, .osInfo{
-    /* margin-left: 1rem; */
-    width: 100%;
-    width: 50rem;
-    margin: 0 auto 3.5rem auto;
+.cpuInfo,
+.systemInfo,
+.biosInfo,
+.osInfo {
+  /* margin-left: 1rem; */
+  width: 100%;
+  width: 50rem;
+  margin: 0 auto 3.5rem auto;
 }
 
-.header_cpu, .header_system, .header_bios, .header_os{
-    text-transform: uppercase;
-    font-size: 600;
-    padding: 1rem;
-    background-color: #e8e8e8;
-    color: #6b6b6b;
+.header_cpu,
+.header_system,
+.header_bios,
+.header_os {
+  text-transform: uppercase;
+  font-size: 600;
+  padding: 1rem;
+  background-color: #e8e8e8;
+  color: #6b6b6b;
 }
 
-.cpuInfo-table, .systemInfo-table, .biosInfo-table, .osInfo-table{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.cpuInfo-table,
+.systemInfo-table,
+.biosInfo-table,
+.osInfo-table {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.cpu_data, .system_data, .bios_data, .os_data{
-    padding: 1rem;
-    border: 1px solid #bfbfbf;
+.cpu_data,
+.system_data,
+.bios_data,
+.os_data {
+  padding: 1rem;
+  border: 1px solid #bfbfbf;
 }
 
-.table-data{
-    padding: 1.3rem;
-    border: 1px solid black;
+.table-data {
+  padding: 1.3rem;
+  border: 1px solid black;
 }
 
-.manufacturer-heading, .model-heading, .serialNumber-heading{
-    background-color: lightgray;
+.manufacturer-heading,
+.model-heading,
+.serialNumber-heading {
+  background-color: lightgray;
+}
+
+/* this is the styling for the user page */
+
+.form_user-image {
+  height: 7.5rem;
+  width: 7.5rem;
+  border-radius: 50%;
+}
+
+.user-main {
+  margin: 3.5rem;
+  /* background-color: #e8e8e8; */
+  padding: 4rem;
+  width: 100%;
+}
+
+.user-info {
+  width: 55rem;
+  margin: 0 auto;
+}
+
+.myprofile_header {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.form-change_username {
+  margin-bottom: 3rem;
+}
+
+.profile-username {
+  font-size: 1.5rem;
+  margin-bottom: 1.2rem;
+  /* border-radius: 50%; */
+}
+
+.profile-username_input {
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 1rem;
+  background-color: #e5e4e2;
+  border: none;
+}
+
+.form_upload {
+  font-size: colo;
 }
