--- a/views/base.pug
+++ b/views/base.pug
@@ -16,3 +16,4 @@ html(lang="en")
         script(src="https://cdn.jsdelivr.net/npm/chart.js")
         script(src="/js/battery.js") 
         script(src="/js/cpu.js")
+        script(type="module"  src="/js/profile.js")
