--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -184,9 +184,8 @@ body {
 }
 
 .form-change_username {
-  margin-bottom: 3rem;
+  margin-bottom: rem;
 }
-
 .profile-username {
   font-size: 1.3rem;
   margin-bottom: 1rem;
@@ -200,6 +199,10 @@ body {
   background-color: #f2f2f2;
   border: none;
   margin-bottom: 2.5rem;
+}
+
+.change-machine_name {
+  margin-bottom: 3.5rem;
 }
 
 .laptop-name {
@@ -234,20 +237,57 @@ body {
   font-size: colo;
 } */
 
+.form-change_photo {
+  display: flex;
+  flex-direction: row;
+}
+
 .custom-file-upload {
+  align-self: center;
+  margin-left: 1.5rem;
   display: inline-block;
+  font-size: 1.3rem;
   padding: 12px 20px;
   cursor: pointer;
-  background-color: #f0f0f0;
-  color: #333;
+  border-bottom: 2px solid #696969;
+  padding-bottom: 0.7rem;
+  color: #696969;
   border-radius: 5px;
-  border: none;
+  transition: all 0.2s;
   text-align: center;
-  font-size: 16px;
 }
 
 .custom-file-upload:hover {
-  background-color: #e0e0e0;
+  background-color: #696969;
+  color: white;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px);
+}
+
+.submit_button-div {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 2rem;
+}
+
+.submit_button {
+  /* justify-self: flex-end; */
+  padding: 1rem 1.5rem;
+  border-radius: 10rem;
+  font-size: 1.2rem;
+  border: none;
+  background-color: #696969;
+  color: whitesmoke;
+  /* color: whitesmoke; */
+  cursor: pointer;
+  min-width: 10rem;
+  transition: 0.2s;
+  /* width: 100%; */
+}
+
+.submit_button:hover {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px);
 }
 
 /* styling for the alert */
