--- a/views/profile.pug
+++ b/views/profile.pug
@@ -33,5 +33,9 @@ block content
                 div.submit_button-div
                     input.submit_button(type="submit")
 
-        script(type="module"  src="/js/myProfile.js")
+            
+            div.update_system-div
+                h2.update_system-header Click Below To Update System Info
+                button.update_system Update System
+
         
