--- a/views/base.pug
+++ b/views/base.pug
@@ -6,6 +6,8 @@ html(lang="en")
         link(rel="stylesheet", href="/styles/style.css")
         title #{title}
     body
+        header.base-header
+            include _header
         main.main 
             include _sidebar
         
@@ -16,3 +18,4 @@ html(lang="en")
         script(src="https://cdn.jsdelivr.net/npm/chart.js")
         script(src="/js/battery.js") 
         script(src="/js/cpu.js")
+        script(type="module",  src="/js/myProfile.js")
