--- a/views/memory.pug
+++ b/views/memory.pug
@@ -1,33 +1,10 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="/styles/style.css")
-        title #{title}
-    body
-        main.main
-            navbar.sidebar
-                div.nav-section.profile
-                    a.nav-link(href="") My Profile 
-                div.nav-section.cpu
-                    a.nav-link(href="/cpu") CPU 
-                
-                div.nav-section.system
-                    a.nav-link(href="/device") System
+extends base
 
-                div.nav-section.system
-                    a.nav-link(href="/memory") Memory
+block content
 
-                div.nav-section.system
-                    a.nav-link(href="/battery") Battery
-
-                div.nav-section.system
-                    a.nav-link(href="/os") OS
-
-            div.info
-                div.memoryChart
-                    canvas#memoryChart
+    div.info
+        div.memoryChart
+            canvas#memoryChart
 
         script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js')
         script(src="https://cdn.jsdelivr.net/npm/chart.js")
