--- a/views/base.pug
+++ b/views/base.pug
@@ -19,3 +19,4 @@ html(lang="en")
         script(src="/js/battery.js") 
         script(src="/js/cpu.js")
         script(type="module",  src="/js/myProfile.js")
+        script(type="module",src="/js/header.js")
