--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,5 +1,5 @@
 div.header-info
-    p.header_username HI #{user.name}
+    p.header_machine-name #{user.laptopName}'s System Info
 
     div.user_logout-photo
         button.logout LOGOUT
